examples/test/testpolicy13714.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13714
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key13: value23
      key6: value30
      key49: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value41
          key22: value14
      podSelector:
        matchLabels:
          key43: value33
          key47: value49
